responsiveness fix. all recipes align to left of page and grow and shrink accordingly

--- a/src/scss/components/footer/footer.scss
+++ b/src/scss/components/footer/footer.scss
@@ -107,7 +107,7 @@
     }
 }
 
-@media screen and (max-width: 62.5rem) {
+@media screen and (max-width: 69rem) {
     .footer_component{
         display: flex;
     }
