--- a/src/scss/components/home/desktop.scss
+++ b/src/scss/components/home/desktop.scss
@@ -19,7 +19,7 @@
     }
 }
 
-@media screen and (max-width: 62.5rem) {
+@media screen and (max-width: 69rem) {
     .yummies {
         &__desktop {
             &--wrapper {
