--- a/src/scss/components/navigation/desktopNavigation.scss
+++ b/src/scss/components/navigation/desktopNavigation.scss
@@ -97,7 +97,7 @@
     }
 }
 
-@media screen and (max-width: 62.5rem) {
+@media screen and (max-width: 69rem) {
     .desktopNav {
         display: none;
     }
